--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -150,5 +150,5 @@
     </div>
   
   </body>
-
+  <script src="main.js"></script>
 </html> 
