--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body class="">
     <div class="hero-bg">
       <header>
         <a href="#"></a>
@@ -118,7 +118,7 @@
       </div>
     </div>
 
-    <div class='form-container'>
+    <div class='form-container container'>
       <div class='estimation-container'>
         <p class='estimation-text'>(GUTHRIE Estimation)</p> 
         <div class='estimations'>
