added button to choose text in drawing

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
         </div>
         <div>
           <input type="button" value=Estimate id='estimate-btn'>
+          <label for="block-text">Text in drawing</label>
+          <select id="block-text">
+            <option>Height</option>
+            <option>Width</option>
+          </select>
         </div>
 
       </div>
