--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <option>5</option>
           </select> 
 
-          <label for="ACB-1600">1600 MCCB</label>
+          <label for="ACB-1600">1600 ACB</label>
           <select class="select-position" id="ACB-1600">
             <option>0</option>
             <option>1</option>
@@ -142,7 +142,7 @@
               <canvas id='guthrie-1'></canvas>
               <canvas id='board-1' class='boards'></canvas>
             </div>
-            <img id="reference"src="https://i.postimg.cc/15W8bvBy/Room-Size.png">
+            <img id="reference_RoomSize"src="https://i.postimg.cc/MpS2tf2Q/Room-Sizing.png">
         </div>
         
         <p class='Side Cable Termination-text'>(Side Cable Termination)</p>
@@ -151,6 +151,8 @@
               <canvas id='guthrie-2'></canvas>
               <canvas id='board-2' class='boards'></canvas>
             </div>
+            <img id="reference_CableEnd"src="https://i.postimg.cc/8zYZzqpm/1Panel.png">
+            <img id="reference_CableFront"src="https://i.postimg.cc/h40MdJ4j/1-Panel-Front.png">
         </div>
       </div>
       
