--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
               <canvas id='guthrie-2'></canvas>
               <canvas id='board-2' class='boards'></canvas>
             </div>
-            <img id="reference_CableEnd"src="https://i.postimg.cc/8zYZzqpm/1Panel.png">
-            <img id="reference_CableFront"src="https://i.postimg.cc/h40MdJ4j/1-Panel-Front.png">
+            <img id="reference_2in1"src="https://i.postimg.cc/k4hj2GdG/2-in-1.png">
         </div>
       </div>
       
