--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <option>4</option>
             <option>5</option>
           </select>
+        </div>
         <div class='selection-wrapper'>
           <label for="ACB-5000">5000 ACB</label>
           <select class="select-position" id="ACB-5000">
