--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div class='form-container container'>
       <div class='estimation-container'>
         <div class='estimation-header'>
-          <div class='estimation-text'>GUTHRIE Estimation (Back Cable Termination)</div>
+          <div class='estimation-text'>GUTHRIE Estimation (Back Cable Termination <b>- MAX 15 Panel</b>)</div>
         </div>
         <div class='estimations'>
           <div class="canvas-container guthrie-back">
@@ -183,7 +183,7 @@
         </div>
   
         <div class='estimation-header'>
-          <div class='estimation-text'>GUTHRIE Estimation (Side Cable Termination)</div>
+          <div class='estimation-text'>GUTHRIE Estimation (Side Cable Termination <b>- MAX 15 Panel</b>)</div>
         </div>
         <div class='estimations'>
           <div class="canvas-container guthrie-side">
