Added drawing width measurement

--- a/index.html
+++ b/index.html
@@ -172,9 +172,14 @@
 
     <div class='form-container container'>
       <div class='estimation-container'>
+
         <div class='estimation-header'>
           <div class='estimation-text'>GUTHRIE Estimation (Back Cable Termination <b>- MAX 15 Panel</b>)</div>
         </div>
+        <div class="measurements-container">
+          <span class="measurements">Drawing Measurements: </span>
+        </div>
+        
         <div class='estimations'>
           <div class="canvas-container guthrie-back">
             <canvas id='board-1' class='boards'></canvas>
@@ -185,12 +190,17 @@
         <div class='estimation-header'>
           <div class='estimation-text'>GUTHRIE Estimation (Side Cable Termination <b>- MAX 15 Panel</b>)</div>
         </div>
+        <div class="measurements-container">
+          <span class="measurements">Drawing Measurements: </span>
+        </div>
+
         <div class='estimations'>
           <div class="canvas-container guthrie-side">
             <canvas id='board-2' class='boards'></canvas>
           </div>
           <img id="reference_2in1" src="https://i.postimg.cc/k4hj2GdG/2-in-1.png">
         </div>
+
       </div>
   
       <div class='estimation-container'>
