--- a/index.html
+++ b/index.html
@@ -162,9 +162,16 @@
     </div>
 
     <div class='sidebar-group'>
-      <div><b>placeholder</b></div>
-      <div class='estimate-btn-wrapper sidebar-group-content'>
+      <div><b>Start Calculation</b></div>
+      <div class='btn-wrapper sidebar-group-content'>
         <input type="button" value=Estimate class='btn btn-primary' id='estimate-btn'>
+      </div>
+    </div>
+
+    <div class='sidebar-group'>
+      <div><b>Debug</b></div>
+      <div class='btn-wrapper sidebar-group-content'>
+        <input type="button" value='Random Qty' class='btn btn-secondary' id='random-qty-btn'>
       </div>
     </div>
   </div>
