Changed navbar layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
 
   <div class='navbar'>
-    <h1>SwitchBoard Sizing Estimation</h1>
+    <span class='navbar-content'>SwitchBoard Sizing Estimation</span>
   </div>
   <div class='sidebar'>
 
