--- a/index.html
+++ b/index.html
@@ -174,7 +174,25 @@
         <input type="button" value='Random Qty' class='btn btn-secondary' id='random-qty-btn'>
       </div>
     </div>
+
+    <div class = 'sidebar-group'>
+      <div><b>Virus!!!</b></div>
+      <div class='btn-wrapper sidebar-group-content'>
+        <!-- Trigger/Open The Modal -->
+        <button id="myBtn">DO NOT CLICK</button>
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+          
+          <!-- Modal content -->
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            
+          </div>
+        </div>
+      </div>
+    </div> 
   </div>
+
   <div class='content-wrapper'>
 
     <div class='form-container container'>
