--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="outgoing">Outgoing Feeder</label>
+          <label for="relay">relay</label>
           <select class="select-position" id="outgoing">
             <option>0</option>
             <option>1</option>
@@ -136,8 +136,8 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="ACB-5000">5000 ACB</label>
-          <select class="select-position" id="ACB-5000">
+          <label for="ACB-3000">3000 ACB</label>
+          <select class="select-position" id="ACB-3000">
             <option>0</option>
             <option>1</option>
             <option>2</option>
