--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         <div id='options-drawing'>
           <label for="block-text">Text in drawing</label>
           <select id="block-text">
+            <option>BreakerRating</option>
             <option>Height</option>
             <option>Width</option>
           </select>
