--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="relay">relay</label>
+          <label for="relay">Relay</label>
           <select class="select-position" id="outgoing">
             <option>0</option>
             <option>1</option>
