Added line break to hint

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
 
     <div class='sidebar-group'>
-      <div><b>Drawing Options</b><span data-hint="Display Breaker Height or Breaker Width" class="Hint"> <u><b>(Hint)</b></u></span></div>
+      <div><b>Drawing Options</b><span data-hint="Display Breaker Height or Breaker Width" class="hint-s-med"> <u><b>(Hint)</b></u></span></div>
       <div id="user-controls" class='sidebar-group-content'>
         <div id='options-drawing'>
           <label for="block-text">Text in drawing</label>
