--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="canvas-container guthrie-back">
             <canvas id='board-1' class='boards'></canvas>
           </div>
-          <img id="reference_RoomSize" src="https://i.postimg.cc/MpS2tf2Q/Room-Sizing.png">
+          <img id="reference_RoomSize" class="parentimage" src="https://i.postimg.cc/MpS2tf2Q/Room-Sizing.png">
         </div>
   
         <div class='estimation-header'>
@@ -241,7 +241,7 @@
           <div class="canvas-container guthrie-side">
             <canvas id='board-2' class='boards'></canvas>
           </div>
-          <img id="reference_2in1" src="https://i.postimg.cc/9MDmBfQ9/2-in-1.jpg">
+          <img id="reference_2in1" class="parentimage" src="https://i.postimg.cc/9MDmBfQ9/2-in-1.jpg">
         </div>
 
       </div>
