--- a/index.html
+++ b/index.html
@@ -5,21 +5,19 @@
 <title></title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
-
 <style>
 
-body {
-
-	background-image: url('grunge_patterns.jpg');
-	background-attachment: fixed;
-	color: #333;
+html{
+	height: 100%;
 }
+body {
+	background-image: url('https://i.postimg.cc/xjP7FvM6/3-higher-res-2-1200x600.jpg');
+  	background-repeat: no-repeat;
+  	background-size: cover;
+	
 
-.box {
-	border-radius: 3px;
-	background: rgba(101, 101, 101, 0.7); margin: auto; padding: 12px;
+
 }
 
 .lightbox {
@@ -29,9 +27,9 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(10, 10, 10, 0.8);
+	/*background: rgba(56, 51, 51, 0.493);*/
 	text-align: center;
-	margin: auto;
+	margin-bottom: 500px;
 
 }
 
@@ -44,7 +42,7 @@ div.horizontal {
 div.vertical {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: top;
 	width: 100%;
 }
 
@@ -71,7 +69,7 @@ div.vertical {
 		<div class="horizontal">
 			<div class="vertical">
 				<div class="box">
-					<input style="margin: 16px; text-align: center;" id="password" type="password" placeholder="password" /> <br />
+					<input style="margin: 16px; text-align: center;" id="password" type="password" placeholder="Enter Password" /> <br />
 					<button id="loginbutton" type="button">Enter</button>
 					<p id="wrongPassword" style="display: none">wrong password</p>
 				</div>
