Change some text for hint, selction option from 5 --> 10

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -24,7 +24,7 @@
   <div class='sidebar'>
 
     <div class='sidebar-group'>
-      <div><b>Select Quantity</b><span data-hint="Insert Breaker Rating based on your SLD" class="Hint"> <u><b>(Hint)</b></u></span></div>
+      <div><b>Select Quantity</b><span data-hint="Insert Breaker Rating based on your SLD" class="hint"> <u><b>(Hint)</b></u></span></div>
       <div id='select-quantity' class='sidebar-group-content'>
         <div class='selection-wrapper'>
           <label for="Bus-Coupler">Bus-Coupler</label>
@@ -35,6 +35,12 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -46,6 +52,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -57,6 +68,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -68,6 +84,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -79,6 +100,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -90,6 +116,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -101,6 +132,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -112,6 +148,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -123,6 +164,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -134,6 +180,11 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
         <div class='selection-wrapper'>
@@ -145,13 +196,18 @@
             <option>3</option>
             <option>4</option>
             <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
           </select>
         </div>
       </div>
     </div>
 
     <div class='sidebar-group'>
-      <div><b>Drawing Options</b><span data-hint="Display Breaker Height or Breaker Width" class="Hint"> <u><b>(Hint)</b></u></span></div>
+      <div><b>Drawing Options</b><span data-hint="Either display rating, height or width of Breaker" class="hint"> <u><b>(Hint)</b></u></span></div>
       <div id="user-controls" class='sidebar-group-content'>
         <div id='options-drawing'>
           <label for="block-text">Text in drawing</label>
@@ -180,7 +236,7 @@
     
     <!--Too be remove -->
     <div class = 'sidebar-group'>
-      <div><b>MUSIC!</b></div>
+      <div><b>MUSIC!!</b></div>
       <div class='btn-wrapper sidebar-group-content'>
     
         <input type="button" value="play" onclick = "play()">
