--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -10,6 +10,7 @@
   <link href="simple-hint.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Sakura.css">
   <audio id="audio" src="http://docs.google.com/uc?export=open&id=1e51rEj3pR8ysKFeL5BlZKdGSxu-1ZFpq"></audio>
 </head>
 
@@ -44,7 +45,7 @@
           </select>
         </div>
         <div class='selection-wrapper'>
-          <label for="incoming">Incoming Feeder</label>
+          <label for="incoming">Incoming</label>
           <select class="select-position" id="incoming">
             <option>0</option>
             <option>1</option>
@@ -317,5 +318,6 @@
 
 </body>
 <script src="main.js"></script>
+<script>src="Sakura.js"</script>
 
 </html>
