Github page unable to load properly, http --> https. (try)

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="Sizing.css">
   <link rel="stylesheet" href="Sakura.css">
-  <audio id="audio" src="http://docs.google.com/uc?export=open&id=1e51rEj3pR8ysKFeL5BlZKdGSxu-1ZFpq"></audio>
+  <audio id="audio" src="https://docs.google.com/uc?export=open&id=1e51rEj3pR8ysKFeL5BlZKdGSxu-1ZFpq"></audio>
 </head>
 
 <body class="">
@@ -315,7 +315,7 @@
   </div>
 
 </body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
 <script src="Sakura.js"></script>
 <script src="Music.js"></script>  
