--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -11,6 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="Sizing.css">
   <link rel="stylesheet" href="Sakura.css">
+  <link rel="stylesheet" href="Intro.css">
   <audio id="audio" src="https://docs.google.com/uc?export=open&id=1e51rEj3pR8ysKFeL5BlZKdGSxu-1ZFpq"></audio>
 </head>
 
@@ -19,7 +20,7 @@
     <a href="#"></a>
   </header>
 
-  <div class='navbar'>
+  <div class='navbar' data-intro="Hello World">
     <span class='navbar-content'>SwitchBoard Sizing Estimation</span>
   </div>
   <div class='sidebar'>
@@ -208,43 +209,49 @@
     </div>
 
     <div class='sidebar-group'>
-      <div><b>Drawing Options</b><span data-hint="Either display rating, height or width of Breaker" class="hint"> <u><b>(Hint)</b></u></span></div>
-      <div id="user-controls" class='sidebar-group-content'>
-        <div id='options-drawing'>
-          <label for="block-text">Text in drawing</label>
-          <select id="block-text">
-            <option>BreakerRating</option>
-            <option>Height</option>
-            <option>Width</option>
-          </select>
+      <div class="Option-Drawing">
+        <div><b>Drawing Options</b><span data-hint="Either display rating, height or width of Breaker" class="hint"> <u><b>(Hint)</b></u></span></div>
+        <div id="user-controls" class='sidebar-group-content'>
+          <div id='options-drawing'>
+            <select id="block-text">
+              <option>BreakerRating</option>
+              <option>Height</option>
+              <option>Width</option>
+            </select>
+          </div>
         </div>
       </div>
     </div>
 
     <div class='sidebar-group'>
-      <div><b>Start Calculation</b></div>
-      <div class='btn-wrapper sidebar-group-content'>
-        <input type="button" value=Estimate class='btn btn-primary' id='estimate-btn'>
+      <div class='Calculation'>
+        <div><b>Start Calculation</b></div>
+        <div class='btn-wrapper sidebar-group-content'>
+          <input type="button" value=Estimate class='btn btn-primary' id='estimate-btn'>
+        </div>
       </div>
     </div>
 
     <div class='sidebar-group'>
-      <div><b>Debug</b></div>
-      <div class='btn-wrapper sidebar-group-content'>
-        <input type="button" value='Random Qty' class='btn btn-secondary' id='random-qty-btn'>
+      <div class='Debug'>
+        <div><b>Debug</b></div>
+        <div class='btn-wrapper sidebar-group-content'>
+          <input type="button" value='Random Qty' class='btn btn-secondary' id='random-qty-btn'>
+        </div>
       </div>
     </div>
     
     <!--Too be remove -->
     <div class = 'sidebar-group'>
-      <div><b>MUSIC!!</b></div>
-      <div class='btn-wrapper sidebar-group-content'>
-        <input type="button" id=btn.play value="play" onclick = "MusicSakura_start()">
-        <input type="button" id=btn.pause value="pause" onclick = "MusicSakura_pause()">
-        <input type="button" id=btn.stop value="stop" onclick = "MusicSakura_stop()()">
+      <div class='Music'>
+        <div><b>MUSIC!!</b></div>
+        <div class='btn-wrapper sidebar-group-content'>
+          <input type="button" id=btn.play value="play" onclick = "MusicSakura_start()">
+          <input type="button" id=btn.pause value="pause" onclick = "MusicSakura_pause()">
+          <input type="button" id=btn.stop value="stop" onclick = "MusicSakura_stop()()">
+        </div>
       </div>
     </div>
-
   </div>
 
   <div class='content-wrapper'>
@@ -274,12 +281,12 @@
         </div>
 
         <div class='estimations'>
-          <div class="canvas-container guthrie-side">
-            <canvas id='board-2' class='boards'></canvas>
-          </div>
-          <img id="reference_2in1" class="parentimage" src="https://i.postimg.cc/9MDmBfQ9/2-in-1.jpg">
+            <div class="canvas-container guthrie-side">
+              <canvas id='board-2' class='boards'></canvas>
+            </div>
+            <img id="reference_2in1" class="parentimage2" src="https://i.postimg.cc/9MDmBfQ9/2-in-1.jpg">
         </div>
-
+       
       </div>
   
       <!-- 
@@ -315,6 +322,9 @@
   </div>
 
 </body>
+
+
+<script src="intro.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
 <script src="Sakura.js"></script>
