Minor change to text, front image and canvas size

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -31,7 +31,7 @@
         <div class='selection-wrapper'>
           <label for="Bus-Coupler">Bus-Coupler</label>
           <select class="select-position" id="incoming">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -47,7 +47,7 @@
         <div class='selection-wrapper'>
           <label for="incoming">Incoming</label>
           <select class="select-position" id="incoming">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -63,7 +63,7 @@
         <div class='selection-wrapper'>
           <label for="mmcb-100">100 MCCB</label>
           <select class="select-position" id="mmcb-100">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -79,7 +79,7 @@
         <div class='selection-wrapper'>
           <label for="mmcb-250">250 MCCB</label>
           <select class="select-position" id="mmcb-250">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -95,7 +95,7 @@
         <div class='selection-wrapper'>
           <label for="mmcb-400">400 MCCB</label>
           <select class="select-position" id="mmcb-400">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -111,7 +111,7 @@
         <div class='selection-wrapper'>
           <label for="mmcb-630">630 MCCB</label>
           <select class="select-position" id="mmcb-630">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -127,7 +127,7 @@
         <div class='selection-wrapper'>
           <label for="mmcb-900">900 MCCB</label>
           <select class="select-position" id="mmcb-900">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -143,7 +143,7 @@
         <div class='selection-wrapper'>
           <label for="ACB-1200">1200 ACB</label>
           <select class="select-position" id="ACB-1200">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -159,7 +159,7 @@
         <div class='selection-wrapper'>
           <label for="ACB-1600">1600 ACB</label>
           <select class="select-position" id="ACB-1600">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -175,7 +175,7 @@
         <div class='selection-wrapper'>
           <label for="ACB-3000">3000 ACB</label>
           <select class="select-position" id="ACB-3000">
-            <option>0</option>
+            <option value ='0'>0</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -211,6 +211,7 @@
         <div><b>Start Calculation</b></div>
         <div class='btn-wrapper sidebar-group-content'>
           <input type="button" value=Estimate class='btn btn-primary' id='estimate-btn'>
+          <input type="button" value=Reset class='btn btn-primary' id="reset-btn">
         </div>
       </div>
     </div>
@@ -243,7 +244,7 @@
       <div class='estimation-container'>
 
         <div class='estimation-header'>
-          <div class='estimation-text'>GUTHRIE Estimation (<b>Cable End Termination </b>- MAX 11 Panel)</div>
+          <div class='estimation-text'>GUTHRIE Estimation (<b>Cable End Termination </b>)</div>
         </div>
         <div class="measurements-container">
           <span class="measurements">Drawing Measurements: </span>
@@ -257,7 +258,7 @@
         </div>
   
         <div class='estimation-header'>
-          <div class='estimation-text'>GUTHRIE Estimation (<b>Cable Front Termination</b> - MAX 11 Panel)</div>
+          <div class='estimation-text'>GUTHRIE Estimation (<b>Cable Front Termination</b>)</div>
         </div>
         <div class="measurements-container">
           <span class="measurements">Drawing Measurements: </span>
