--- a/index.html
+++ b/index.html
@@ -8,16 +8,10 @@
 </head>
 <style>
 
-html{
-	height: 100%;
-}
 body {
-	background-image: url('https://i.postimg.cc/xjP7FvM6/3-higher-res-2-1200x600.jpg');
-  	background-repeat: no-repeat;
-  	background-size: cover;
-	
-
-
+	background-image: url('https://i.postimg.cc/Y2nCnBYF/download.png');
+  background-size: fill;
+  background-repeat: no-repeat;
 }
 
 .lightbox {
@@ -27,9 +21,9 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	/*background: rgba(56, 51, 51, 0.493);*/
+	/*background: rgba(53, 50, 50, 0.493);*/
 	text-align: center;
-	margin-bottom: 500px;
+	margin-top: 100px;
 
 }
 
@@ -37,6 +31,7 @@ div.horizontal {
 	display: flex;
 	justify-content: center;
 	height: 100%;
+
 }
 
 div.vertical {
