Created css and js folders

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- CSS only -->
-  <link href="simple-hint.css" rel="stylesheet" />
+  <link href="css/simple-hint.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <link rel="stylesheet" href="Sizing.css">
-  <link rel="stylesheet" href="Sakura.css">
-  <link rel="stylesheet" href="Intro.css">
+  <link rel="stylesheet" href="css/Sizing.css">
+  <link rel="stylesheet" href="css/Sakura.css">
+  <link rel="stylesheet" href="css/Intro.css">
   <audio id="audio" src="https://docs.google.com/uc?export=open&id=1e51rEj3pR8ysKFeL5BlZKdGSxu-1ZFpq"></audio>
 </head>
 
@@ -298,12 +298,12 @@
 </body>
 
 
-<script src="intro.js"></script>
+<script src="js/intro.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
-<script src="Sakura.js"></script>
-<script src="Music.js"></script>  
-<script src="Sizing.js"></script>
+<script src="js/Sakura.js"></script>
+<script src="js/Music.js"></script>  
+<script src="js/Sizing.js"></script>
 
 
 
