Changed image links to local path

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -254,7 +254,7 @@
           <div class="canvas-container guthrie-back">
             <canvas id='board-1' class='boards'></canvas>
           </div>
-          <img id="reference_2in1" class="parentimage2" src="https://i.postimg.cc/pVBLKtNh/2-in-1.png">
+          <img id="reference_2in1" class="parentimage2" src="img/2-in-1.png">
         </div>
   
         <div class='estimation-header'>
@@ -268,7 +268,7 @@
             <div class="canvas-container guthrie-side">
               <canvas id='board-2' class='boards'></canvas>
             </div>
-            <img id="reference_RoomSize" class="parentimage" src="https://i.postimg.cc/MpS2tf2Q/Room-Sizing.png">
+            <img id="reference_RoomSize" class="parentimage" src="img/Room-Sizing.png">
         </div>
 
         <div class='estimation-header'>
