Preset (Save/load), abs --> relative,

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -194,6 +194,16 @@
     </div>
 
     <div class='sidebar-group'>
+      <div class='Save'>
+        <div><b>Preset</b></div>
+        <div class='btn-wrapper sidebar-group-content'>
+          <input type="button" value='Save' class='btn btn-secondary' id='Save-btn'>
+          <input type="button" value='Load' class='btn btn-secondary' id='Load-btn'>
+        </div>
+      </div>
+    </div>
+
+    <div class='sidebar-group'>
       <div class='Tour'>
         <div><b>Take a Tour</b></div>
         <div class='btn-wrapper sidebar-group-content'>
@@ -207,9 +217,9 @@
       <div class='Music'>
         <div><b>MUSIC!!</b></div>
         <div class='btn-wrapper sidebar-group-content'>
-          <input type="button" id=btn.play value="play" onclick = "MusicSakura_start()">
-          <input type="button" id=btn.pause value="pause" onclick = "MusicSakura_pause()">
-          <input type="button" id=btn.stop value="stop" onclick = "MusicSakura_stop()()">
+          <input type="button" id=btn-play value="Play" onclick = "MusicSakura_start()">
+          <input type="button" id=btn-pause value="Pause" onclick = "MusicSakura_pause()">
+          <input type="button" id=btn-stop value="Stop" onclick = "MusicSakura_stop()()">
         </div>
       </div>
     </div>
