Move Intro to top, change a few text

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/index.html
@@ -26,6 +26,15 @@
   <div class='sidebar'>
 
     <div class='sidebar-group'>
+      <div class='Tour'>
+        <div><b>Take a Tour</b></div>
+        <div class='sidebar-group-content'>
+          <input type="button" value='Start Intro' class='btn btn-secondary' id='Intro-btn'>
+        </div>
+      </div>
+    </div>
+
+    <div class='sidebar-group'>
       <div><b>Select Quantity</b><span data-hint="Insert Breaker Rating based on your SLD" class="hint"> <u><b>(Hint)</b></u></span></div>
       <div id='select-quantity' class='sidebar-group-content'>
         <div class='selection-wrapper'>
@@ -203,15 +212,6 @@
       </div>
     </div>
 
-    <div class='sidebar-group'>
-      <div class='Tour'>
-        <div><b>Take a Tour</b></div>
-        <div class='btn-wrapper sidebar-group-content'>
-          <input type="button" value='Start Intro' class='btn btn-secondary' id='Intro-btn'>
-        </div>
-      </div>
-    </div>
-    
     <!--Too be remove -->
     <div class = 'sidebar-group'>
       <div class='Music'>
