--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
 </head>
 <style>
 
-/* body {
-	background-image: url('https://i.postimg.cc/Y2nCnBYF/download.png');
-  background-size: fill;
-  background-repeat: no-repeat;
-} */
-
 #logo {
 	width: 200px;
 }
@@ -68,7 +62,7 @@ div.vertical {
 		<div class="horizontal">
 			<div class="vertical">
 				<div class="box">
-					<img src='https://i.postimg.cc/Y2nCnBYF/download.png' id="logo" />
+					<img src='BecaLogo.png' id="logo" />
 					<br />
 					<input style="margin: 16px; text-align: center;" id="password" type="password" placeholder="Enter Password" /> 
 					<br />
